--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,520 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Музей</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/logo.png"
+      class="favicon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+    />
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
     <script src="scripts/main.js"></script>
+
+    <header class="header">
+      <div class="had">
+
+        <div class="header__all">
+          <div class="icon">
+            <a
+              href="#menu"
+              class="icon--menu"
+            ></a>
+          </div>
+          <h1 class="header__all--title">Художній музей</h1>
+        </div>
+
+
+        <div class="header__pict">
+          <div class="header__all--img">
+            <div class="header__all--logo">
+              <h2 class="header__all--text">
+                na
+                <br />
+                mu
+              </h2>
+            </div>
+          </div>
+        </div>
+
+
+
+
+        <div class="scale3">
+          <div class="header__all--ticbox">
+            <a href="#exhidition">
+              <img
+                class="header__all--ticket"
+                src="./images/tickets.png"
+                alt="Tickets"
+              />
+            </a>
+          </div>
+          <div class="hr">
+            <div class="hr__border"></div>
+            <p>Події</p>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="menu2 page__menu"
+      id="menu"
+    >
+      <div class="menu">
+        <div class="scale2"></div>
+        <div>
+          <a
+            href="#"
+            class="icon--close"
+          ></a>
+        </div>
+        <div class="menu__content">
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <div class="menu__content--c1 menu__topik1">
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#galery"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#exhidition"
+                  >
+                    Виставки та
+                    <br />
+                    події
+                  </a>
+                </li>
+              </div>
+              <div class="menu__content--c2 menu__topik2">
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#about"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#contacts"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+        </div>
+        <hr class="menu__hr" />
+        <div class="menu__content--schedule">
+          <div>Графік роботи</div>
+          <br />
+          <div>
+            <span class="menu__content--bold">12:00 — 20:00</span>
+            середа
+          </div>
+          <div>
+            <span class="menu__content--bold">12:00 — 20:00</span>
+            четвер
+          </div>
+          <div>
+            <span class="menu__content--bold">12:00 — 20:00</span>
+            п’ятниця
+          </div>
+          <div>
+            <span class="menu__content--bold">11:00 — 19:00</span>
+            субота
+          </div>
+          <div>
+            <span class="menu__content--bold">11:00 — 19:00</span>
+            неділя
+          </div>
+        </div>
+        <div class="menu__content--schedule2">
+          <div>
+            <span class="menu__content--bold">Вихідні:</span>
+            понеділок, вівторок
+          </div>
+          <div>Каса припиняє роботу за 1 годину до закриття музею</div>
+        </div>
+      </div>
+      </div>
+    </aside>
+
+    <main class="main">
+
+      <section
+        class="events"
+        id="exhidition"
+      >
+        <div class="events__title">Актуальні події</div>
+        <div class="events__collection">
+          <img
+            class="events__collection--img"
+            src="././images/Rectangle 2.1.png"
+            alt="collection"
+          />
+
+          <div class="events__collection--about events__one">
+            <p class="events__collection--name1">
+              ВИСТАВКА
+              <span class="events__collection--data">
+                &nbsp &nbsp &nbsp &nbsp 26.08-29.11.2019
+              </span>
+            </p>
+            <p class="events__collection--name2">
+              Йду і повертаюсь
+              <img
+                class="events__collection--name21"
+                src="././images/Rectangle 23.1.png"
+                alt="collection"
+              />
+            </p>
+            <p class="events__collection--name3">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="events__collection">
+          <img
+            class="events__collection--img"
+            src="././images/Rectangle 4.1.png"
+            alt="collection"
+          />
+          <div class="events__collection--about events__two">
+            <p class="events__collection--name1">
+              ВИСТАВКА
+              <span class="events__collection--data">
+                &nbsp &nbsp &nbsp &nbsp 26.08-29.11.2019
+              </span>
+            </p>
+            <p class="events__collection--name2">
+              І спогади і мрії
+              <img
+                class="events__collection--name21"
+                src="././images/Rectangle 23.1.png"
+                alt="collection"
+              />
+            </p>
+            <p class="events__collection--name3">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+      <div >
+
+        <div class="events__collection">
+          <img
+            class="events__collection--cover"
+            src="././images/Rectangle 20.png"
+            alt="collection"
+          />
+          <div class="events__collection--about--up">
+            <p class="events__collection--name1 lection">
+              ЛЕКЦІЯ
+              <span class="events__collection--data1">26/08/2019 - 1100</span>
+            </p>
+            <p class="events__collection--name2 lection--name">
+              Від класицизму до романтизму
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <section>
+        <div class="galery__title1">Галерея</div>
+        <div
+          class="gallery js-flickity"
+          data-flickity-options='{ "wrapAround": true }'
+        >
+          <div class="gallery-cell">
+            <img
+              src="./images/galery/1.1.png"
+              alt="galery"
+            />
+          </div>
+          <div class="gallery-cell">
+            <img
+              src="./images/galery/1.2.png"
+              alt="galery"
+            />
+          </div>
+          <div class="gallery-cell">
+            <img
+              src="./images/galery/1.3.png"
+              alt="galery"
+            />
+          </div>
+          <div class="gallery-cell">
+            <img
+              src="./images/galery/1.4.png"
+              alt="galery"
+            />
+          </div>
+          <div class="gallery-cell">
+            <img
+              src="./images/galery/1.5.png"
+              alt="galery"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="galery"
+        id="galery"
+      >
+        <div class="galery__title">Галерея</div>
+        <div class="galery__photo">
+          <img
+            class="galery__photo--1"
+            src="././images/galery/1.png"
+            alt="collection"
+          />
+          <img
+            class="galery__photo--2"
+            src="././images/galery/2.png"
+            alt="collection"
+          />
+          <img
+            class="galery__photo--3"
+            src="././images/galery/3.png"
+            alt="collection"
+          />
+          <img
+            class="galery__photo--4"
+            src="././images/galery/4.png"
+            alt="collection"
+          />
+        </div>
+      </section>
+
+
+      <div>
+        <section id="about">
+          <div class="subscript">
+
+            <img
+                class="events__collection--cover--down"
+                src="././images/Rectangle 22.png"
+                alt="collection"
+            />
+
+            <div class="events__collection--subscript">
+              <p class="events__collection--subscript1">Підписка</p>
+              <p class="events__collection--subscript2">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <form onsubmit="this. reset (); return false;">
+                <div class="search-form">
+                  <input
+                    class="search-form__field search-form__container"
+                    type="text"
+                    action="#"
+                    data-qa="hover"
+                    required placeholder="E-mail"
+                  />
+                  <a href=" ">
+                    <img
+                    class="search-form__button search-form__container"
+                    data-qa="hover"
+                    src="././images/Group 57.png"
+                    alt="email"
+                    />
+                  </a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
+
+    <div class="scale">
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__wrapper">
+            <div class="footer__logo">
+              <h2 class="header__all--text">
+                na
+                <br />
+                mu
+              </h2>
+
+              <div class="footer__un">
+                <a
+                  href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+                  target="_blank"
+                >
+                  <img
+                    class="footer__facebook"
+                    src="././images/facebook-letter-logo.png"
+                    alt="collection"
+                  />
+                </a>
+                <a
+                  href="https://www.instagram.com/namu.museum/"
+                  target="_blank"
+                >
+                  <img
+                    class="footer__insta footer__un--right"
+                    src="././images/instagram (3).png"
+                    alt="collection"
+                  />
+                </a>
+              </div>
+            </div>
+
+            <div
+              class="footer__menu"
+              id="contacts"
+            >
+              <div class="menu__content--schedule footer__menu--schedule">
+                <div>Графік роботи</div>
+                <br />
+                <div>
+                  <span class="menu__content--bold">12:00 — 20:00</span>
+                  середа
+                </div>
+                <div>
+                  <span class="menu__content--bold">12:00 — 20:00</span>
+                  четвер
+                </div>
+                <div>
+                  <span class="menu__content--bold">12:00 — 20:00</span>
+                  п’ятниця
+                </div>
+                <div>
+                  <span class="menu__content--bold">11:00 — 19:00</span>
+                  субота
+                </div>
+                <div>
+                  <span class="menu__content--bold">11:00 — 19:00</span>
+                  неділя
+                </div>
+                <div class="menu__content--schedule2 footer__menu--schedule2">
+                  <br />
+                  <div><span class="menu__content--bold">Вихідні:</span> понеділок, вівторок</div>
+                  <div>Каса припиняє роботу за 1 годину</div>
+                  <div>до закриття музею</div>
+                </div>
+              </div>
+              <div class="footer__menu--contact">
+                <div>Контакти:</div>
+                <br />
+                <div>
+                  вул. М. Грушевського, 6; Київ, 01001
+                  <br />
+                  тел. +38 (044) 278-13-57
+                  <br />
+                  факс +38 (044) 278-74-54
+                  <br />
+                  e-mail: info@namu.kiev.ua
+                </div>
+              </div>
+              <hr class="footer__hr" />
+              <div class="menu__content1 footer__bottom">
+                <nav class="nav menu__nav">
+                  <ul class="nav__list">
+                    <div class="menu__content1--c1">
+                      <li class="nav__item footer__item1">
+                        <a
+                          class="nav__link footer__link"
+                          href="#galery"
+                        >
+                          Галерея
+                        </a>
+                      </li>
+                      <li class="nav__item">
+                        <a
+                          class="nav__link footer__link"
+                          href="#exhidition"
+                        >
+                          Виставки та події
+                        </a>
+                      </li>
+                    </div>
+                    <div class="menu__content1--c2">
+                      <li class="nav__item">
+                        <a
+                          class="nav__link footer__link"
+                          href="#about"
+                        >
+                          Про Нас
+                        </a>
+                      </li>
+                      <li class="nav__item">
+                        <a
+                          class="nav__link footer__link"
+                          href="#contacts"
+                        >
+                          Контакти
+                        </a>
+                      </li>
+                    </div>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footik">
+          <div class="box">Copyright © 2019. All Rights Reserved.</div>
+          <div class="box">Designed by Zhyriada Marina</div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
