--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,166 @@
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script src="scripts/main.js"></script>
+
+    <header class="header">
+      <a href="#" class="header-link">
+        <img
+          src="./images/header-bgimage.png"
+          alt="bgimage"
+          class="header-link-photo"
+        >
+      </a>
+
+      <div class="container">
+        <div class="header-icons">
+          <a href="#" class="header-burger-menu">
+            <img
+              src="./images/burger-menu.svg"
+              alt="burger-menu"
+              class="header-burger-menu-icon"
+            >
+          </a>
+
+          <a href="#" class="header-logo">
+            <img
+              src="./images/logo.svg"
+              alt="logo"
+              class="header-logo-icon"
+            >
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <div class="container">
+        <section class="art-museum">
+          <p class="art-museum-title">ХУДОЖНІЙ МУЗЕЙ</p>
+
+          <a href="#" class="art-museum-link">
+            <img
+              src="./images/tickets-image.png"
+              alt="tickets-image"
+              class="art-museum-link-img"
+            >
+          </a>
+        </section>
+      </div>
+
+      <section class="actual-events">
+        <div class="container">
+          <p class="actual-events-title">Актуальні події</p>
+
+          <a href="#" class="actual-events-first-link">
+            <img
+              src="./images/actual-events-1-photo.png"
+              alt="actual-events-1-photo"
+              class="actual-events-first-link-photo"
+            >
+          </a>
+
+          <div class="actual-events-container-for-dates">
+            <p class="actual-events-container-for-dates-title">ВИСТАВКА</p>
+
+            <p class="actual-events-container-for-dates-date">26.08-29.11.2019</p>
+          </div>
+
+          <div class="actual-events-container-for-nameandsquare">
+            <p class="actual-events-container-for-nameandsquare-name">Йду i повертаюсь</p>
+
+            <a href="#" class="actual-events-container-for-nameandsquare-link">
+              <img
+                src="./images/red-square.png"
+                alt="square"
+                class="actual-events-container-for-nameandsquare-link-square"
+              >
+            </a>
+          </div>
+
+          <p class="actual-events-description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+
+          <a href="#" class="actual-events-second-link">
+            <img
+              src="./images/actual-events-2-photo.png"
+              alt="actual-events-1-photo"
+              class="actual-events-second-link-photo"
+            >
+          </a>
+
+          <div class="actual-events-container-for-dates">
+            <p class="actual-events-container-for-dates-title">ВИСТАВКА</p>
+
+            <p class="actual-events-container-for-dates-date">26.08-29.11.2019</p>
+          </div>
+
+          <div class="actual-events-container-for-nameandsquare">
+            <p class="actual-events-container-for-nameandsquare-name">І спогади і мрії</p>
+
+            <a href="#" class="actual-events-container-for-nameandsquare-link">
+              <img
+                src="./images/red-square.png"
+                alt="square"
+                class="actual-events-container-for-nameandsquare-link-square"
+              >
+            </a>
+          </div>
+
+          <p class="actual-events-description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+        </div>
+
+        <a href="#" class="actual-events-third-link">
+          <img
+            src="./images/actual-events-3-photo.png"
+            alt="actual-events-1-photo"
+            class="actual-events-third-link-photo"
+          >
+
+          <div class="container-lection">
+            <div class="actual-events-container-for-lection">
+              <p class="actual-events-container-for-lection-title">ЛЕКЦІЯ</p>
+
+              <p class="actual-events-container-for-lection-date">26/08/2019 - 11:00</p>
+            </div>
+
+            <p class="actual-events-container-for-lection-name">Від класицизму до романтизму</p>
+          </div>
+        </a>
+      </section>
+
+      <section class="gallery">
+        <div class="container">
+          <p class="gallery-title">Галерея</p>
+
+          <a href="#" class="gallery-link">
+            <img
+              src="./images/gallery-first-photo.png"
+              alt="gallery-photo"
+              class="gallery-link-photo"
+            >
+          </a>
+
+          <a href="#" class="gallery-points-link">
+            <img
+              src="./images/points.png"
+              alt="gallery-photo"
+              class="gallery-points-link-photo"
+            >
+          </a>
+        </div>
+      </section>
+
+      <section class="sign-up">
+        <a href="#" class="sign-up-link">
+          <img
+            src="./images/sign-up-link-photo.png"
+            alt="sign-up-link-photo"
+            class="sign-up-link-photo"
+          >
+        </a>
+      </section>
+    </main>
+
+    <footer class="footer"></footer>
   </body>
 </html>
