--- a/src/index.html
+++ b/src/index.html
@@ -110,14 +110,14 @@
           <div class="menu__nav__links">
             <a
               href="#gallery-m"
-              class="menu__nav__links__link menu__nav__links__link--m"
+              class="menu__nav__links__link a--m"
             >
               Галерея
             </a>
 
             <a
               href="#gallery-d"
-              class="menu__nav__links__link menu__nav__links__link--d"
+              class="menu__nav__links__link a--d"
             >
               Галерея
             </a>
@@ -129,7 +129,7 @@
               Про Нас
             </a>
             <a
-              href="#"
+              href="#events"
               class="menu__nav__links__link"
             >
               Виставки та події
@@ -440,10 +440,11 @@
 
       <div class="footer__links">
         <div class="footer__links__group">
-          <a href="#gallery">Галерея</a>
-          <a href="footer">Про Нас</a>
-          <a href="events">Виставки та події</a>
-          <a href="footer">Контакти</a>
+          <a href="#gallery-m" class="a--m">Галерея</a>
+          <a href="#gallery-d" class="a--d">Галерея</a>
+          <a href="#">Про Нас</a>
+          <a href="#events">Виставки та події</a>
+          <a href="#footer">Контакти</a>
         </div>
       </div>
 
