add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <script src="scripts/main.js"></script>
+    <!-- <script src="scripts/main.js"></script> -->
 
     <header class="header">
       <a href="#" class="header-link">
@@ -170,6 +170,29 @@
             class="sign-up-link-photo"
           >
         </a>
+
+
+        <div class="container-for-form">
+          <form
+          class="sign-up-contact-form"
+          action="#"
+          method="post"
+          onsubmit="this.reset(); window.scrollTo({top: 0, behavior: 'smooth'}); return false;"
+          >
+            <input
+              class="sign-up-contact-form-email"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+            >
+          </form>
+
+          <a href="#" class="sign-up-red-box">
+            <img src="./images/sign-up-red-box-arrow.png" alt="arrow" class="sign-up-red-box-arrow">
+          </a>
+        </div>
+
       </section>
     </main>
 
