--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -19,11 +22,11 @@
 
   <body>
     <!-- #region header -->
-    <header class="header">
+    <header class="page__left-padding header">
       <div class="header__container">
         <a
           href="#menu"
-          class="icon icon--menu"
+          class="icon icon__block icon--menu"
         ></a>
 
         <div class="header__l-container">
@@ -48,17 +51,68 @@
         </div>
 
         <div class="header__bg">
-          <div class="header__bg-t">
-            <h1>
-              NA
-              <br />
-              MU
-            </h1>
-          </div>
+          <h1 class="header__bg-t">
+            NA
+            <br />
+            MU
+          </h1>
         </div>
       </div>
     </header>
     <!-- #endregion -->
+
+    <!-- #region menu-->
+    <aside
+      class="page__left-padding page__menu menu"
+      id="menu"
+    >
+      <div class="page__right-padding menu__grid-wrapper">
+        <a
+          href="#"
+          class="icon icon__block icon--close"
+        ></a>
+
+        <ul class="menu__nav">
+          <li class="menu__item">
+            <a
+              href="#gallery"
+              class="menu__link"
+            >
+              Галерея
+            </a>
+          </li>
+          <li class="menu__item">
+            <a
+              href="#performance"
+              class="menu__link"
+            >
+              Виставки та<br>  події
+            </a>
+          </li>
+          <li class="menu__item">
+            <a
+              href="#about-us"
+              class="menu__link"
+            >
+              Про Нас
+            </a>
+          </li>
+          <li class="menu__item">
+            <a
+              href="#contacts"
+              class="menu__link"
+            >
+              Контакти
+            </a>
+          </li>
+        </ul>
+
+        <div class="menu__devider"></div>
+
+        <div class="menu__schedule"></div>
+      </div>
+    </aside>
+    <!-- #endregion-->
 
     <script src="scripts/main.js"></script>
   </body>
