--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,9 @@
               href="#performance"
               class="menu__link"
             >
-              Виставки та<br>  події
+              Виставки та
+              <br />
+              події
             </a>
           </li>
           <li class="menu__item">
@@ -109,7 +111,39 @@
 
         <div class="menu__devider"></div>
 
-        <div class="menu__schedule"></div>
+        <div class="menu__schedule">
+          <h4 class="menu__shedule-title">Графік роботи</h4>
+          <ul class="menu__schedule-list">
+            <li class="menu__schedule-item">
+              <span class="menu__t-bold">12:00 — 20:00</span>
+              середа
+            </li>
+            <li class="menu__schedule-item">
+              <span class="menu__t-bold">12:00 — 20:00</span>
+              четвер
+            </li>
+            <li class="menu__schedule-item">
+              <span class="menu__t-bold">12:00 — 20:00</span>
+              п'ятниця
+            </li>
+            <li class="menu__schedule-item">
+              <span class="menu__t-bold">11:00 — 19:00</span>
+              субота
+            </li>
+            <li class="menu__schedule-item">
+              <span class="menu__t-bold">11:00 — 19:00</span>
+              неділя
+            </li>
+          </ul>
+        </div>
+
+        <p class="menu__schedule-describe menu__schedule-item">
+          <span class="menu__t-bold">Вихідні:</span>
+          понеділок, вівторок
+          <br />
+          Каса припиняє роботу за 1 годину до <br />
+          закриття музею
+        </p>
       </div>
     </aside>
     <!-- #endregion-->
