--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,6 @@
 
     <header class="header">
       <div class="had">
-
         <div class="header__all">
           <div class="icon">
             <a
@@ -64,7 +63,6 @@
           </div>
           <h1 class="header__all--title">Художній музей</h1>
         </div>
-
 
         <div class="header__pict">
           <div class="header__all--img">
@@ -77,9 +75,6 @@
             </div>
           </div>
         </div>
-
-
-
 
         <div class="scale3">
           <div class="header__all--ticbox">
@@ -188,11 +183,9 @@
           <div>Каса припиняє роботу за 1 годину до закриття музею</div>
         </div>
       </div>
-      </div>
     </aside>
 
     <main class="main">
-
       <section
         class="events"
         id="exhidition"
@@ -257,8 +250,7 @@
           </div>
         </div>
       </section>
-      <div >
-
+      <div>
         <div class="events__collection">
           <img
             class="events__collection--cover"
@@ -345,15 +337,13 @@
         </div>
       </section>
 
-
       <div>
         <section id="about">
           <div class="subscript">
-
             <img
-                class="events__collection--cover--down"
-                src="././images/Rectangle 22.png"
-                alt="collection"
+              class="events__collection--cover--down"
+              src="././images/Rectangle 22.png"
+              alt="collection"
             />
 
             <div class="events__collection--subscript">
@@ -368,14 +358,15 @@
                     type="text"
                     action="#"
                     data-qa="hover"
-                    required placeholder="E-mail"
+                    required
+                    placeholder="E-mail"
                   />
                   <a href=" ">
                     <img
-                    class="search-form__button search-form__container"
-                    data-qa="hover"
-                    src="././images/Group 57.png"
-                    alt="email"
+                      class="search-form__button search-form__container"
+                      data-qa="hover"
+                      src="././images/Group 57.png"
+                      alt="email"
                     />
                   </a>
                 </div>
@@ -385,7 +376,6 @@
         </section>
       </div>
     </main>
-
 
     <div class="scale">
       <footer class="footer">
@@ -451,7 +441,10 @@
                 </div>
                 <div class="menu__content--schedule2 footer__menu--schedule2">
                   <br />
-                  <div><span class="menu__content--bold">Вихідні:</span> понеділок, вівторок</div>
+                  <div>
+                    <span class="menu__content--bold">Вихідні:</span>
+                    понеділок, вівторок
+                  </div>
                   <div>Каса припиняє роботу за 1 годину</div>
                   <div>до закриття музею</div>
                 </div>
