--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,616 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>НАМУ</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon/favicon.ico"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page">
+    <!-- #region header -->
+    <header
+      class="page__header header"
+      id="header"
+    >
+      <a
+        href="#aside"
+        class="header__menu"
+      >
+        <img
+          class="icon icon--menu"
+          src="./images/icons/menu.png"
+          alt="Menu"
+        />
+      </a>
+
+      <div class="header__description">
+        <h2 class="header__description-title">
+          Художній
+          <br />
+          музей
+        </h2>
+
+        <div class="header__description-tickets">
+          <p class="header__description-tickets-text">Квитки</p>
+          <a
+            href="#events"
+            class="header__description-button-link"
+          >
+            <button class="header__description-button">
+              <img
+                class="icon icon--swipe"
+                src="./images/icons/swipe.png"
+                alt="Swipe"
+              />
+            </button>
+          </a>
+        </div>
+
+        <a
+          href="#events"
+          class="header__description-events-link"
+        >
+          <p class="header__description-events">Події</p>
+        </a>
+      </div>
+
+      <div class="header__image">
+        <a
+          href="#header"
+          class="header__image-logo"
+        >
+          <img
+            class="icon icon--logo"
+            src="./images/icons/logo.png"
+            alt="Menu"
+          />
+        </a>
+      </div>
+    </header>
+    <!-- #endregion -->
+
+    <!-- #region aside -->
+    <aside
+      class="page__aside"
+      id="aside"
+    >
+      <nav class="aside">
+        <div class="aside__part1">
+          <a
+            href="#header"
+            class="aside__part1-close-menu"
+          >
+            <img
+              class="icon icon--close-menu"
+              src="./images/icons/close-menu.png"
+              alt="Close Menu"
+            />
+          </a>
+
+          <ul class="aside__part1-list">
+            <li class="aside__part1-list-item">
+              <a
+                href="#gallery"
+                class="aside__part1-list-item-link"
+              >
+                Галерея
+              </a>
+
+              <a
+                href="#events"
+                class="aside__part1-list-item-link"
+              >
+                Виставки та
+                <br />
+                події
+              </a>
+            </li>
+            <li class="aside__part1-list-item">
+              <a
+                href="#subscription"
+                class="aside__part1-list-item-link"
+              >
+                Про Нас
+              </a>
+              <a
+                href="#contacts"
+                class="aside__part1-list-item-link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="aside__center-line"></div>
+
+        <ul class="aside__schedule">
+          <li class="aside__schedule-title">Графік роботи</li>
+          <li class="aside__schedule-week">
+            <div class="aside__schedule-week-days">
+              <strong>12:00 — 20:00</strong>
+              середa
+              <br />
+              <strong>12:00 — 20:00</strong>
+              четвер
+              <br />
+              <strong>12:00 — 20:00</strong>
+              п’ятниця
+              <br />
+              <strong>11:00 — 19:00</strong>
+              субота
+              <br />
+              <strong>11:00 — 19:00</strong>
+              неділя
+              <br />
+            </div>
+
+            <div class="aside__schedule-week-holidays">
+              <p class="aside__schedule-week-holidays-text">
+                <strong>Вихідні:</strong>
+                понеділок, вівторок
+              </p>
+
+              <p class="aside__schedule-week-holidays-text">
+                Каса припиняє роботу за 1 годину до
+                <br />
+                закриття музею
+              </p>
+            </div>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="aside-overlay"></div>
+    </aside>
+    <!-- #endregion -->
+
+    <!-- #region main -->
+    <main class="page__main">
+      <div
+        class="events"
+        id="events"
+      >
+        <h3 class="page__main-title">Актуальні події</h3>
+
+        <div class="exibition">
+          <img
+            class="exibition__image"
+            src="./images/events/events1.png"
+            alt="Exibition 1"
+          />
+
+          <div class="exibition__description">
+            <div class="exibition__description-type">
+              <p class="exibition__description-type-text">ВИСТАВКА</p>
+              <p class="exibition__description-type-date">26.08-29.11.2019</p>
+            </div>
+
+            <div class="exibition__description-title">
+              <h3 class="exibition__description-title-text">
+                Йду і повертаюсь
+              </h3>
+
+              <img
+                class="exibition__description-title-marker"
+                src="./images/events/title-marker.png"
+                alt="Title Marker"
+              />
+            </div>
+
+            <p class="exibition__description-text">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="exibition">
+          <img
+            class="exibition__image"
+            src="./images/events/events2.png"
+            alt="Exibition 2"
+          />
+
+          <div class="exibition__description">
+            <div class="exibition__description-type">
+              <p class="exibition__description-type-text">ВИСТАВКА</p>
+              <p class="exibition__description-type-date">26.08-29.11.2019</p>
+            </div>
+
+            <div class="exibition__description-title">
+              <h3 class="exibition__description-title-text">
+                І спогади і мрії
+              </h3>
+
+              <img
+                class="exibition__description-title-marker"
+                src="./images/events/title-marker.png"
+                alt="Title Marker"
+              />
+            </div>
+
+            <p class="exibition__description-text">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+
+        <img
+          class="lecture-image"
+          src="./images/events/events3.png"
+          alt="Lecture Photo"
+        />
+
+        <div class="lecture">
+          <div class="lecture__description">
+            <div class="lecture__description-type">
+              <p class="lecture__description-type-text">ЛЕКЦІЯ</p>
+              <p class="lecture__description-type-date">26/08/2019 - 11:00</p>
+            </div>
+
+            <div class="lecture__description-title">
+              <h3 class="lecture__description-title-text">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="gallery"
+        id="gallery"
+      >
+        <h3 class="page__main-title">Галерея</h3>
+
+        <div class="gallery__slider">
+          <div class="slider">
+            <div class="imgs_slides">
+              <input
+                type="radio"
+                name="radio-btn"
+                class="radio"
+                id="radio1"
+                checked
+              />
+              <input
+                type="radio"
+                name="radio-btn"
+                class="radio"
+                id="radio2"
+              />
+              <input
+                type="radio"
+                name="radio-btn"
+                class="radio"
+                id="radio3"
+              />
+              <input
+                type="radio"
+                name="radio-btn"
+                class="radio"
+                id="radio4"
+              />
+
+              <div class="first slide">
+                <img
+                  src="./images/gallery/gallery1.png"
+                  alt="Gallery Photo 1"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/gallery/gallery2.png"
+                  alt="Gallery Photo 2"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/gallery/gallery3.png"
+                  alt="Gallery Photo 3"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/gallery/gallery4.png"
+                  alt="Gallery Photo 4"
+                />
+              </div>
+            </div>
+
+            <div class="navigation-container">
+              <div class="navigation">
+                <label
+                  for="radio1"
+                  class="navigation-btn"
+                ></label>
+                <label
+                  for="radio2"
+                  class="navigation-btn"
+                ></label>
+                <label
+                  for="radio3"
+                  class="navigation-btn"
+                ></label>
+                <label
+                  for="radio4"
+                  class="navigation-btn"
+                ></label>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery__photos">
+          <div class="gallery__photos-2">
+            <img
+              class="gallery__photos-img"
+              src="./images/gallery/gallery1.png"
+              alt="Gallery Photo 1"
+            />
+            <img
+              class="gallery__photos-img"
+              src="./images/gallery/gallery3.png"
+              alt="Gallery Photo 2"
+            />
+          </div>
+
+          <div class="gallery__photos-4">
+            <img
+              class="gallery__photos-img"
+              src="./images/gallery/gallery4.png"
+              alt="Gallery Photo 3"
+            />
+            <img
+              class="gallery__photos-img"
+              src="./images/gallery/gallery5.png"
+              alt="Gallery Photo 4"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="subscription"
+        id="subscription"
+      >
+        <img
+          class="subscription__bg"
+          src="./images/subscription-bg.png"
+          alt="Subscription Section Background"
+        />
+
+        <div class="subscription__description">
+          <h3 class="page__main-title page__main-title--subscription">
+            Підписка
+          </h3>
+          <p class="subscription__description-text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <div class="subscription__description-button">
+            <form
+              class="subscription__description-button-form"
+              onsubmit="this.reset(); return false;"
+            >
+              <label class="subscription__description-button-form-label">
+                <input
+                  type="email"
+                  class="subscription__description-button-form-label-text"
+                  placeholder="E-mail"
+                  required
+                />
+              </label>
+
+              <button
+                type="submit"
+                class="subscription__description-button-swipe"
+              >
+                <img
+                  class="icon icon--swipe"
+                  src="./images/icons/swipe-black.png"
+                  alt="Swipe"
+                />
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- #endregion -->
+
+    <!-- #region footer -->
+    <footer class="footer">
+      <div class="footer-part1">
+        <div class="footer__icons">
+          <a
+            href="#header"
+            class="header__image-logo"
+          >
+            <img
+              class="icon icon--logo"
+              src="./images/icons/logo.png"
+              alt="Menu"
+            />
+          </a>
+
+          <div class="footer__icons-socials">
+            <a
+              class="footer__icons-socials-facebook"
+              href="https://www.facebook.com/"
+            >
+              <img
+                class="icon icon--facebook"
+                src="./images/icons/facebook.png"
+                alt="Facebook"
+              />
+            </a>
+            <a
+              class="footer__icons-socials-instagram"
+              href="https://www.instagram.com/"
+            >
+              <img
+                class="icon icon--instagram"
+                src="./images/icons/instagram.png"
+                alt="Facebook"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="footer-part2-part3">
+          <div class="footer-part2">
+            <div class="footer__top">
+              <div class="footer__top-info">
+                <ul class="footer__top-info-schedule">
+                  <li class="footer__top-info-schedule-title">Графік роботи</li>
+                  <li class="footer__top-info-schedule-week">
+                    <div class="footer__top-info-schedule-week-days">
+                      <strong>12:00 — 20:00</strong>
+                      середa
+                      <br />
+                      <strong>12:00 — 20:00</strong>
+                      четвер
+                      <br />
+                      <strong>12:00 — 20:00</strong>
+                      п’ятниця
+                      <br />
+                      <strong>11:00 — 19:00</strong>
+                      субота
+                      <br />
+                      <strong>11:00 — 19:00</strong>
+                      неділя
+                      <br />
+                    </div>
+
+                    <div class="footer__top-info-schedule-week-holidays">
+                      <p class="footer__top-info-schedule-week-holidays-text">
+                        <strong>Вихідні:</strong>
+                        понеділок, вівторок
+                      </p>
+
+                      <p class="footer__top-info-schedule-week-holidays-text">
+                        Каса припиняє роботу за 1 годину до
+                        <br />
+                        закриття музею
+                      </p>
+                    </div>
+                  </li>
+                </ul>
+
+                <ul
+                  class="footer__top-info-contacts"
+                  id="contacts"
+                >
+                  <li class="footer__top-info-contacts-title">Контакти:</li>
+
+                  <li>
+                    <a
+                      class="footer__top-info-contacts-link"
+                      href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/@50.449395,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu"
+                      target="_blank"
+                    >
+                      вул. М. Грушевського, 6; Київ, 01001
+                      <br />
+                    </a>
+
+                    <a
+                      class="footer__top-info-contacts-link"
+                      href="tel:+380442781357"
+                    >
+                      тел. +38 (044) 278-13-57
+                      <br />
+                    </a>
+
+                    <a
+                      class="footer__top-info-contacts-link"
+                      href="tel:+380442787454"
+                    >
+                      факс +38 (044) 278-74-54
+                      <br />
+                    </a>
+
+                    <a
+                      class="footer__top-info-contacts-link"
+                      href="mailto:info@namu.kiev.ua"
+                    >
+                      e-mail: info@namu.kiev.ua
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="footer__top-info-contacts-swipe-link"
+                      href="#header"
+                    >
+                      <img
+                        class="footer__top-info-contacts-swipe"
+                        src="./images/icons/arrow-up.png"
+                        alt="Swipe Up"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer-part3">
+            <div class="footer__top-line"></div>
+
+            <ul class="footer__top-list">
+              <li class="footer__top-list-item">
+                <a
+                  href="#gallery"
+                  class="footer__top-list-item-link"
+                >
+                  Галерея
+                </a>
+
+                <a
+                  href="#events"
+                  class="footer__top-list-item-link"
+                >
+                  Виставки та
+                  <br />
+                  події
+                </a>
+              </li>
+              <li class="footer__top-list-item">
+                <a
+                  href="#subscription"
+                  class="footer__top-list-item-link"
+                >
+                  Про Нас
+                </a>
+                <a
+                  href="#contacts"
+                  class="footer__top-list-item-link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__bottom">
+        <p class="footer__bottom-design">Designed by Zhyriada Marina</p>
+        <p class="footer__bottom-copy">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+    <!-- #endregion -->
   </body>
 </html>
