--- a/src/index.html
+++ b/src/index.html
@@ -280,82 +280,43 @@
 
         <div class="gallery__slider">
           <div class="slider">
-            <div class="imgs_slides">
-              <input
-                type="radio"
-                name="radio-btn"
-                id="radio1"
-                checked
-              />
+            <div class="slides-container">
+              <div class="imgs_slides">
+                <input type="radio" name="radio-btn"
+                id="radio1" checked />
+                <input type="radio" name="radio-btn"
+                id="radio2" />
+                <input type="radio" name="radio-btn"
+                id="radio3" />
+                <input type="radio" name="radio-btn"
+                id="radio4" />
 
-              <input
-                type="radio"
-                name="radio-btn"
-                id="radio2"
-              />
-
-              <input
-                type="radio"
-                name="radio-btn"
-                id="radio3"
-              />
-
-              <input
-                type="radio"
-                name="radio-btn"
-                id="radio4"
-              />
-
-              <div class="first slide">
-                <img
-                  src="./images/gallery/gallery1.png"
-                  alt="Gallery Photo 1"
-                />
-              </div>
-
-              <div class="slide">
-                <img
-                  src="./images/gallery/gallery2.png"
-                  alt="Gallery Photo 2"
-                />
-              </div>
-
-              <div class="slide">
-                <img
-                  src="./images/gallery/gallery3.png"
-                  alt="Gallery Photo 3"
-                />
-              </div>
-              <div class="slide">
-                <img
-                  src="./images/gallery/gallery4.png"
-                  alt="Gallery Photo 4"
-                />
-              </div>
-            </div>
-
-            <div class="navigation-container">
-              <div class="navigation">
-                <label
-                  for="radio1"
-                  class="navigation-btn"
-                ></label>
-                <label
-                  for="radio2"
-                  class="navigation-btn"
-                ></label>
-                <label
-                  for="radio3"
-                  class="navigation-btn"
-                ></label>
-                <label
-                  for="radio4"
-                  class="navigation-btn"
-                ></label>
+                <div class="first slide">
+                  <img src="./images/gallery/gallery1.png" alt="Gallery Photo 1" />
+                </div>
+                <div class="slide">
+                  <img src="./images/gallery/gallery2.png" alt="Gallery Photo 2" />
+                </div>
+                <div class="slide">
+                  <img src="./images/gallery/gallery3.png" alt="Gallery Photo 3" />
+                </div>
+                <div class="slide">
+                  <img src="./images/gallery/gallery4.png" alt="Gallery Photo 4" />
+                </div>
               </div>
             </div>
           </div>
         </div>
+        
+        <div class="navigation-container">
+          <div class="navigation">
+            <label for="radio1" class="navigation-btn"></label>
+            <label for="radio2" class="navigation-btn"></label>
+            <label for="radio3" class="navigation-btn"></label>
+            <label for="radio4" class="navigation-btn"></label>
+          </div>
+        </div>
+
 
         <div class="gallery__photos">
           <div class="gallery__photos-2">
