--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
           </li>
           <li class="menu__item">
             <a
-              href="#performance"
+              href="#performances"
               class="menu__link"
             >
               Виставки та
@@ -141,13 +141,74 @@
           <span class="menu__t-bold">Вихідні:</span>
           понеділок, вівторок
           <br />
-          Каса припиняє роботу за 1 годину до <br />
+          Каса припиняє роботу за 1 годину до
+          <br />
           закриття музею
         </p>
       </div>
     </aside>
     <!-- #endregion-->
 
+    <main class="main">
+      <section
+        class="page__container performances"
+        id="performances"
+      >
+        <h2 class="performances__title">Актуальні події</h2>
+
+        <div class="performances__container">
+          <img
+            src="./images/persormance_image/performance-1.png"
+            alt="Performance__image"
+            class="performances__image"
+          />
+
+          <div class="performances__description">
+            <p class="performances__date">
+              Виставка
+              <span class="performances__hightlight-text">
+                26.08-29.11.2019
+              </span>
+            </p>
+            <div class="performances__title-container">
+              <h3 class="performances__event-title">Йду і повертаюсь</h3>
+              <span class="performances__event-rect"></span>
+            </div>
+            <p class="performances__details">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </div>
+
+        <div class="performances__container">
+          <img
+            src="./images/persormance_image/performance-2.png"
+            alt="Performance__image"
+            class="performances__image"
+          />
+
+          <div class="performances__description">
+            <p class="performances__date">
+              Виставка
+              <span class="performances__hightlight-text">
+                26.08-29.11.2019
+              </span>
+            </p>
+            <div class="performances__title-container">
+              <h3 class="performances__event-title">І спогади і мрії</h3>
+              <span class="performances__event-rect"></span>
+            </div>
+            <p class="performances__details">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="scripts/main.js"></script>
   </body>
 </html>
