--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,10 @@
   <body class="page__body">
     <script src="scripts/main.js"></script>
 
-    <header class="header">
+    <header
+      class="header"
+      id="had"
+    >
       <div class="had">
         <div class="header__all">
           <div class="icon">
@@ -112,8 +115,14 @@
               <div class="menu__content--c1 menu__topik1">
                 <li class="nav__item">
                   <a
-                    class="nav__link"
+                    class="nav__link__m"
                     href="#galery"
+                  >
+                    Галерея
+                  </a>
+                  <a
+                    class="nav__link__d"
+                    href="#galeryD"
                   >
                     Галерея
                   </a>
@@ -269,48 +278,62 @@
         </div>
       </div>
 
-      <section>
+      <section
+        class="slider__wrapper"
+        id="galery"
+      >
         <div class="galery__title1">Галерея</div>
-        <div
-          class="gallery js-flickity"
-          data-flickity-options='{ "wrapAround": true }'
-        >
-          <div class="gallery-cell">
+        <ul class="slider">
+          <li class="slider__item">
             <img
-              src="./images/galery/1.1.png"
-              alt="galery"
+              class="slider__item__image"
+              alt="gallery 1"
+              src="images/galery/1.1.png"
             />
-          </div>
-          <div class="gallery-cell">
+          </li>
+          <li class="slider__item">
             <img
-              src="./images/galery/1.2.png"
-              alt="galery"
+              class="slider__item__image"
+              alt="gallery 2"
+              src="images/galery/1.2.png"
             />
-          </div>
-          <div class="gallery-cell">
+          </li>
+          <li class="slider__item">
             <img
-              src="./images/galery/1.3.png"
-              alt="galery"
+              class="slider__item__image"
+              alt="gallery 3"
+              src="images/galery/1.3.png"
             />
-          </div>
-          <div class="gallery-cell">
+          </li>
+          <li class="slider__item">
             <img
-              src="./images/galery/1.4.png"
-              alt="galery"
+              class="slider__item__image"
+              alt="gallery 4"
+              src="images/galery/1.4.png"
             />
-          </div>
-          <div class="gallery-cell">
+          </li>
+          <li class="slider__item">
             <img
-              src="./images/galery/1.5.png"
-              alt="galery"
+              class="slider__item__image"
+              alt="gallery 5"
+              src="images/galery/1.5.png"
             />
-          </div>
+          </li>
+        </ul>
+
+        <div class="slider__points">
+          <div
+            class="slider__points__point slider__points__point--active"
+          ></div>
+          <div class="slider__points__point"></div>
+          <div class="slider__points__point"></div>
+          <div class="slider__points__point"></div>
         </div>
       </section>
 
       <section
         class="galery"
-        id="galery"
+        id="galeryD"
       >
         <div class="galery__title">Галерея</div>
         <div class="galery__photo">
@@ -351,24 +374,22 @@
               <p class="events__collection--subscript2">
                 Бути в курсі всіх актуальних подій та останніх новин.
               </p>
-              <form onsubmit="this. reset (); return false;">
+              <form onsubmit="this.reset(); return false;">
                 <div class="search-form">
                   <input
                     class="search-form__field search-form__container"
-                    type="text"
+                    type="email"
                     action="#"
                     data-qa="hover"
                     required
                     placeholder="E-mail"
                   />
-                  <a href=" ">
-                    <img
-                      class="search-form__button search-form__container"
-                      data-qa="hover"
-                      src="././images/Group 57.png"
-                      alt="email"
-                    />
-                  </a>
+                  <button
+                    class="search-form__button search-form__container"
+                    data-qa="hover"
+                    alt="email"
+                    type="email"
+                  ></button>
                 </div>
               </form>
             </div>
@@ -469,8 +490,14 @@
                     <div class="menu__content1--c1">
                       <li class="nav__item footer__item1">
                         <a
-                          class="nav__link footer__link"
+                          class="nav__link__m footer__link__m"
                           href="#galery"
+                        >
+                          Галерея
+                        </a>
+                        <a
+                          class="nav__link__d footer__link__d"
+                          href="#galeryD"
                         >
                           Галерея
                         </a>
