--- a/src/index.html
+++ b/src/index.html
@@ -60,13 +60,12 @@
       </div>
     </header>
     <!-- #endregion -->
-
     <!-- #region menu-->
     <aside
-      class="page__left-padding page__menu menu"
+      class="page__menu menu"
       id="menu"
     >
-      <div class="page__right-padding menu__grid-wrapper">
+      <div class="page__container menu__grid-wrapper">
         <a
           href="#"
           class="icon icon__block icon--close"
@@ -205,6 +204,20 @@
               народження видатної української художниці Тетяни Яблонської
               відкриває ретроспективну ювілейну виставку «І спогади і мрії».
             </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="panorama">
+        <div class="panorama__bg"></div>
+        <div class="panorama__container">
+          <div class="panorama__description">
+            <div class="panorama__schedule-container">
+              <p class="panorama__shedule-key">Лекція</p>
+              <p class="panorama__shedule-value">26/08/2019 - 11:00</p>
+            </div>
+
+            <h3 class="panorama__title">Від класицизму до романтизму</h3>
           </div>
         </div>
       </section>
